# kl_challenge

./: .gitignore  CMakeLists.txt  readme.md
cmake/: generate_ar_input_file.cmake
src/: CMakeLists.txt  kl_error.hpp  logger.hpp  model.cpp  model.hpp
test/: CMakeLists.txt  test_main.cpp
vendors/opencv2/: core.hpp  highgui.hpp  imgproc.hpp  opencv.hpp
vendors/tflite/include/tensorflow/lite/: allocation.h  arena_planner.h  builtin_op_data.h  context.h  context_util.h  create_op_resolver.h  error_reporter.h  external_cpu_backend_context.h  graph_info.h  interpreter.h  interpreter_builder.h  interpreter_test_util.h  memory_planner.h  model.h  model_builder.h  mutable_op_resolver.h  op_resolver.h  optional_debug_tools.h  portable_type_to_tflitetype.h  signature_runner.h  simple_memory_arena.h  simple_planner.h  stateful_error_reporter.h  stderr_reporter.h  string_util.h  tflite_with_xnnpack_optional.h  type_to_tflitetype.h  util.h  version.h
vendors/tflite/include/tensorflow/lite/core/: subgraph.h
vendors/tflite/include/tensorflow/lite/schema/: schema_generated.h
vendors/tflite/include/tensorflow/lite/tools/: gen_op_registration.h  list_flex_ops.h  verifier.h  verifier_internal.h
vendors/tflite/include/tensorflow/lite/tools/versioning/: gpu_compatibility.h  op_signature.h  op_version.h  runtime_version.h
